Fix image alignment

--- a/src/components/FloatingHelper/FloatingHelperContent/FloatingHelperContent.st.css
+++ b/src/components/FloatingHelper/FloatingHelperContent/FloatingHelperContent.st.css
@@ -16,6 +16,4 @@
 .image {
   margin-left: 18px;
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
